# medicine-agent

./: .env  .gitignore  AGENTS.md  CLAUDE.md  CLIENT_AGENT_API.md  Neo4j_节点关系速查表.md  README.md  langgraph.json  pyproject.toml
.claude/: settings.local.json
app/: main.py
app/agent/: admin_agent.py  graph_tool.py
app/api/: main.py
app/core/: __init__.py  agent_trace.py  assistant_status.py  codes.py  cors.py  exception_handlers.py  exceptions.py  langsmith.py  llm.py  milvus.py  mongodb.py  pre_authorize.py  prompts.py  redis.py  request_context.py  rq.py  sse_tool_events.py
app/exception/: __init__.py  exception_handlers.py
app/repositories/: vector_repository.py
app/schemas/: admin_assistant_history.py  admin_message.py  assistant_run.py  auth.py  conversation.py  conversation_summary.py  excel_entities.py  http_response.py  knowledge_import.py  prompt.py  response.py  sse_response.py
app/services/: admin_assisant_service.py  admin_assistant_service.py  assistant_stream_service.py  auth_service.py  chunk_add_service.py  chunk_rebuild_service.py  chunk_service.py  client_assistant_service.py  conversation_service.py  conversation_summary_service.py  document_chunk_service.py  image_parse_service.py  knowledge_base_service.py  memory_service.py  memory_summary_service.py  message_service.py  message_trace_service.py  message_tts_usage_service.py  speech_stt_service.py  summary_service.py  token_usage_service.py  user_service.py  vector_service.py
app/utils/: log.py  (+7 more)
doc/: knowledge_context.md  knowledge_schema.sql
tests/: test.py  test_main_startup.py
(+708 files in other folders)
